2008-08-18  Alberto Garcia  <agarcia@igalia.com>

	* src/metadata.c
	(lastfm_get_user_track_tags)
	(lastfm_get_track_tags)
	* src/xmlrpc.c (tag_track, recommend_track): When dealing with
	album data, use the artist name from the album rather than the one
	from the track.

	* src/playlist.h
	* src/playlist.c (lastfm_track_destroy)
	* src/protocol.c (lastfm_parse_track): Store the artist's album
	rather than the album page URL.

2008-08-18  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-main-window.c (vgl_main_window_set_state): Enable the
	bookmarks menu when stopped or playing.

2008-08-18  Alberto Garcia  <agarcia@igalia.com>

	* src/util.h
	* src/util.c (lastfm_url_decode, lastfm_url_encode)
	* src/protocol.c (lastfm_parse_playlist): New functions to
	encode/decode using Last.fm URL format.

	* src/playlist.h
	* src/playlist.c (lastfm_track_destroy)
	* src/protocol.c (lastfm_parse_track): Store the album URL in
	LastfmTrack.

	* src/xmlrpc.c (tag_track): When tagging an album, get the artist
	name from the Last.fm album URL rather thant using the interpreter
	of the current song.

	* src/metadata.c (lastfm_get_track_tags): Use Last.fm URL encoding
	to get existing tags.

	Fixes: #2741

2008-08-18  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-bookmark-mgr.h
	* src/vgl-bookmark-window.c (vgl_bookmark_window_close)
	* src/vgl-bookmark-mgr.c (vgl_bookmark_mgr_load_from_disk)
	(vgl_bookmark_mgr_save_to_disk, vgl_bookmark_mgr_init)
	(vgl_bookmark_mgr_finalize, vgl_bookmark_mgr_add_bookmark)
	(vgl_bookmark_mgr_remove_bookmark)
	(vgl_bookmark_mgr_change_bookmark, vgl_bookmark_mgr_reorder):
	New 'dirty' flag: don't save the bookmark file unless it has been
	modified.

	* src/vgl-main-window.c (create_main_menu)
	(vgl_main_window_set_state): Disable the whole bookmarks menu when
	the UI is in connecting state.

	* src/controller.c
	(controller_add_bookmark): Save bookmark file after adding a new
	bookmark from the menu.